--- a/lib/templates/nodeapi/src/package.json
+++ b/lib/templates/nodeapi/src/package.json
@@ -24,25 +24,22 @@
     "url": "https://github.com/vitorbritto/boilerplates/issues"
   },
   "scripts": {
-    "server": "nodemon app.js",
-    "lint": "gulp",
-    "test": "gulp mocha",
-    "all": "npm run server && npm run lint"
+    "start": "gulp server"
   },
   "licenses": {
     "type": "MIT",
     "url": "https://github.com/vitorbritto/boilerplates/blob/master/LICENSE"
   },
   "dependencies": {
-    "express": "3.3.4",
-    "nodemon": "*"
+    "express": "3.3.4"
   },
   "devDependencies": {
     "mocha": "~1.10.0",
     "chai": "~1.8.0",
     "gulp": "~3.5.0",
-    "gulp-jshint": "~1.3.4",
     "gulp-mocha": "~0.4.1",
+    "gulp-nodemon": "^1.0.2",
+    "gulp-jshint": "~1.3.4",
     "jshint-stylish": "~0.1.5"
   }
 }
