--- a/lib/templates/spa/.travis.yml
+++ b/lib/templates/spa/.travis.yml
@@ -1,6 +1,13 @@
 language: node_js
+
 node_js:
-  - 0.10
+  - "0.10"
+
+env:
+  - NODE_ENV=development
+
+services:
+  - mongodb
 
 branches:
   only:
