--- a/lib/templates/nodeapp/package.json
+++ b/lib/templates/nodeapp/package.json
@@ -32,19 +32,24 @@
     "url": "https://github.com/vitorbritto/boilerplates/blob/master/LICENSE"
   },
   "dependencies": {
-    "express": "^3.5.2",
+    "express": "^4.1.1",
+    "static-favicon": "~1.0.0",
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "body-parser": "~1.0.0",
+    "method-override": "^1.0.0",
+    "jade": "~1.3.0",
+    "stylus": "0.42.3",
+    "forever": "*",
     "mongoose": "^3.8.8",
-    "chai": "^1.8.1",
-    "mocha": "^1.10.0",
-    "forever": "latest",
-    "jade": "latest",
-    "stylus": "latest"
+    "chai": "^1.9.1",
+    "mocha": "^1.18.2"
   },
   "devDependencies": {
-    "gulp": "^3.5.6",
-    "gulp-mocha": "~0.4.1",
-    "gulp-nodemon": "^1.0.2",
-    "gulp-jshint": "~1.3.4",
-    "jshint-stylish": "~0.1.5"
+    "gulp": "^3.6.2",
+    "gulp-mocha": "*",
+    "gulp-nodemon": "*",
+    "gulp-jshint": "^1.5.5",
+    "jshint-stylish": "^0.2.0"
   }
 }
