--- a/lib/templates/benmstack/src/package.json
+++ b/lib/templates/benmstack/src/package.json
@@ -24,6 +24,22 @@
     "node": ">=0.10.0",
     "npm": ">=1.1.0"
   },
+  "dependencies": {
+    "express": "^4.1.1",
+    "static-favicon": "~1.0.0",
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "body-parser": "~1.0.0",
+    "method-override": "^1.0.0",
+    "jade": "~1.3.0",
+    "stylus": "0.42.3",
+    "forever": "*",
+    "mongoose": "^3.8.8",
+    "grunt": "^0.4.4",
+    "browserify": "^3.44.2",
+    "chai": "^1.9.1",
+    "mocha": "^1.18.2"
+  },
   "devDependencies": {
     "grunt": "^0.4.4",
     "time-grunt": "^0.3.1",
@@ -51,7 +67,6 @@
     "grunt-handlebars": "^0.0.6",
     "grunt-contrib-requirejs": "^0.4.3",
     "grunt-umd": "^1.7.3",
-    "browserify": "^3.44.2",
     "grunt-browserify": "^2.0.8",
     "grunt-contrib-jasmine": "^0.6.3",
     "grunt-contrib-qunit": "^0.4.0",
