--- a/lib/templates/meanstack/src/package.json
+++ b/lib/templates/meanstack/src/package.json
@@ -25,14 +25,22 @@
     "npm": ">=1.1.0"
   },
   "dependencies": {
-    "express": "^3.3.4",
+    "express": "^4.1.1",
+    "static-favicon": "~1.0.0",
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "body-parser": "~1.0.0",
+    "method-override": "^1.0.0",
+    "jade": "~1.3.0",
+    "stylus": "0.42.3",
+    "forever": "*",
     "mongoose": "^3.8.8",
     "grunt": "^0.4.4",
     "browserify": "^3.44.2",
-    "forever": "latest"
+    "chai": "^1.9.1",
+    "mocha": "^1.18.2"
   },
   "devDependencies": {
-
     "time-grunt": "^0.3.1",
     "load-grunt-tasks": "^0.4.0",
     "grunt-contrib-clean": "^0.5.0",
