--- a/lib/templates/nodeapp/package.json
+++ b/lib/templates/nodeapp/package.json
@@ -40,6 +40,7 @@
     "method-override": "^1.0.0",
     "jade": "~1.3.0",
     "stylus": "0.42.3",
+    "nib": "^1.0.2",
     "forever": "*",
     "mongoose": "^3.8.8",
     "chai": "^1.9.1",
@@ -47,9 +48,11 @@
   },
   "devDependencies": {
     "gulp": "^3.6.2",
-    "gulp-mocha": "*",
-    "gulp-nodemon": "*",
+    "gulp-mocha": "^0.4.1",
+    "gulp-nodemon": "^1.0.2",
+    "gulp-uglify": "^0.3.0",
     "gulp-jshint": "^1.5.5",
-    "jshint-stylish": "^0.2.0"
+    "jshint-stylish": "^0.2.0",
+    "browser-sync": "^0.9.1"
   }
 }
