--- a/lib/templates/nodeapp/package.json
+++ b/lib/templates/nodeapp/package.json
@@ -1,9 +1,9 @@
 {
+  "private": true,
   "name": "application-name",
   "version": "0.1.0",
   "title": "Project Name",
   "description": "Project description goes here",
-  "private": true,
   "author": {
     "name": "Vitor Britto",
     "url": "http://vitorbritto.com.br",
@@ -11,11 +11,10 @@
   },
   "keywords": [
     "boilerplate",
-    "project",
     "gulp",
     "nodejs",
-    "expressjs",
-    "restful api"
+    "express",
+    "framework"
   ],
   "repository": {
     "type": "git",
@@ -24,27 +23,34 @@
   "bugs": {
     "url": "https://github.com/vitorbritto/boilerplates/issues"
   },
-  "scripts": {
-    "start": "gulp server"
-  },
   "licenses": {
     "type": "MIT",
     "url": "https://github.com/vitorbritto/boilerplates/blob/master/LICENSE"
   },
+  "scripts": {
+    "start": "node app.js",
+    "test": "mocha"
+  },
+  "engines": {
+    "node": "~0.10.0"
+  },
   "dependencies": {
     "express": "^4.1.1",
+    "jade": "~1.3.0",
+    "stylus": "0.42.3",
+    "nib": "^1.0.2",
+    "mongoose": "^3.8.8",
+    "connect-mongo": "~0.4.0",
     "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "method-override": "^1.0.0",
-    "jade": "~1.3.0",
-    "stylus": "0.42.3",
-    "nib": "^1.0.2",
-    "forever": "*",
-    "mongoose": "^3.8.8",
-    "chai": "^1.9.1",
-    "mocha": "^1.18.2"
+    "errorhandler": "^1.0.0",
+    "moment": "~2.6.0",
+    "express-session": "^1.0.4",
+    "compression": "^1.0.1",
+    "winston": "~0.7.3"
   },
   "devDependencies": {
     "gulp": "^3.6.2",
@@ -53,6 +59,16 @@
     "gulp-uglify": "^0.3.0",
     "gulp-jshint": "^1.5.5",
     "jshint-stylish": "^0.2.0",
-    "browser-sync": "^0.9.1"
+    "gulp-load-plugins": "^0.5.1",
+    "gulp-changed": "^0.3.0",
+    "gulp-clean": "^0.2.4",
+    "gulp-livereload": "^1.5.0",
+    "gulp-header": "^1.0.2",
+    "gulp-imagemin": "^0.5.0",
+    "mocha": "^1.18.2",
+    "chai": "~1.9.1",
+    "supertest": "~0.12.0",
+    "superagent": "^0.18.0",
+    "expect.js": "^0.3.1"
   }
 }
