--- a/lib/templates/meanstack/src/bower.json
+++ b/lib/templates/meanstack/src/bower.json
@@ -29,7 +29,7 @@
         "angular": "~1.2"
     },
     "devDependencies": {
-        "mocha": "~1.17.1",
-        "chai": "~1.9.0"
+        "chai": "*",
+        "mocha": "*"
     }
 }
