--- a/lib/templates/meanstack/src/package.json
+++ b/lib/templates/meanstack/src/package.json
@@ -37,8 +37,8 @@
     "mongoose": "^3.8.8",
     "grunt": "^0.4.4",
     "browserify": "^3.44.2",
-    "chai": "^1.9.1",
-    "mocha": "^1.18.2"
+    "chai": "*",
+    "mocha": "*"
   },
   "devDependencies": {
     "time-grunt": "^0.3.1",
