--- a/lib/templates/benmstack/src/bower.json
+++ b/lib/templates/benmstack/src/bower.json
@@ -31,8 +31,8 @@
         "requirejs-text": "~2.0.5"
     },
     "devDependencies": {
-        "mocha": "~1.17.1",
-        "chai": "~1.9.0"
+        "chai": "*",
+        "mocha": "*"
     },
     "exportsOverride": {
         "jquery": {
