--- a/lib/templates/npmpkg/package.json
+++ b/lib/templates/npmpkg/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/vitorbritto/pkgname/issues"
   },
-  "homepage": "https://github.com/vitorbritto/pkgname"
+  "homepage": "https://github.com/vitorbritto/pkgname",
+  "devDependencies": {
+    "chai": "*",
+    "mocha": "*"
+  }
 }
