--- a/lib/templates/nodeapp/package.json
+++ b/lib/templates/nodeapp/package.json
@@ -68,7 +68,6 @@
     "mocha": "^1.18.2",
     "chai": "~1.9.1",
     "supertest": "~0.12.0",
-    "superagent": "^0.18.0",
-    "expect.js": "^0.3.1"
+    "superagent": "^0.18.0"
   }
 }
