--- a/lib/templates/nodeapp/package.json
+++ b/lib/templates/nodeapp/package.json
@@ -29,12 +29,14 @@
   },
   "scripts": {
     "start": "node app.js",
-    "test": "mocha"
+    "test": "karma start karma.conf"
   },
   "engines": {
     "node": "~0.10.0"
   },
   "dependencies": {
+    "gulp": "^3.6.2",
+    "bower": "1.2.x",
     "express": "^4.1.1",
     "jade": "~1.3.0",
     "stylus": "0.42.3",
@@ -50,11 +52,10 @@
     "moment": "~2.6.0",
     "express-session": "^1.0.4",
     "compression": "^1.0.1",
-    "winston": "~0.7.3"
+    "winston": "~0.7.3",
+    "forever": "*"
   },
   "devDependencies": {
-    "gulp": "^3.6.2",
-    "gulp-mocha": "^0.4.1",
     "gulp-nodemon": "^1.0.2",
     "gulp-uglify": "^0.3.0",
     "gulp-jshint": "^1.5.5",
@@ -65,9 +66,9 @@
     "gulp-livereload": "^1.5.0",
     "gulp-header": "^1.0.2",
     "gulp-imagemin": "^0.5.0",
-    "mocha": "^1.18.2",
     "chai": "~1.9.1",
     "supertest": "~0.12.0",
-    "superagent": "^0.18.0"
+    "superagent": "^0.18.0",
+    "browserify": "3.19.x"
   }
 }
