--- a/lib/templates/general/src/package.json
+++ b/lib/templates/general/src/package.json
@@ -15,10 +15,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/vitorbritto/gruntify.git"
+    "url": "git://github.com/vitorbritto/boierlplates.git"
   },
   "bugs": {
-    "url": "https://github.com/vitorbritto/gruntify/issues"
+    "url": "https://github.com/vitorbritto/boierlplates/issues"
   },
   "engines": {
     "node": ">=0.10.0",
@@ -32,36 +32,14 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-compress": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-browser-sync": "^0.8.2",
-    "grunt-nodemon": "^0.2.1",
-    "grunt-bump": "0.0.13",
+    "grunt-browser-sync": "lastest",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-imageoptim": "^1.4.1",
-    "grunt-concurrent": "^0.5.0",
     "grunt-rsync": "^0.5.0",
     "grunt-ftp-deploy": "^0.1.2",
     "grunt-contrib-csslint": "^0.2.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-stylus": "^0.15.0",
-    "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-compass": "^0.7.2",
-    "grunt-contrib-htmlmin": "^0.2.0",
-    "grunt-contrib-jade": "^0.11.0",
-    "grunt-handlebars": "^0.0.6",
-    "grunt-contrib-requirejs": "^0.4.3",
-    "grunt-umd": "^1.7.3",
-    "browserify": "^3.44.2",
-    "grunt-browserify": "^2.0.8",
-    "grunt-contrib-jasmine": "^0.6.3",
-    "grunt-contrib-qunit": "^0.4.0",
-    "grunt-mocha": "^0.4.10",
-    "grunt-karma": "^0.8.2",
-    "grunt-karma-coveralls": "^2.3.0",
-    "karma-jasmine": "^0.1.0",
-    "karma-mocha": "^0.1.0",
-    "karma-qunit": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.0",
-    "karma-coverage": "^0.1.0"
+    "grunt-contrib-htmlmin": "^0.2.0"
   }
 }
