--- a/lib/templates/npmpkg/package.json
+++ b/lib/templates/npmpkg/package.json
@@ -9,6 +9,9 @@
   "engines": {
     "node": ">=0.10.0"
   },
+  "scripts": {
+    "test": "mocha"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/vitorbritto/pkgname"
