--- a/lib/templates/nodewebkit/src/package.json
+++ b/lib/templates/nodewebkit/src/package.json
@@ -4,13 +4,14 @@
   "version": "0.1.0",
   "homepage": "www.projectname.com",
   "license": "MIT",
-  "script": {
+  "scripts": {
     "install": "grunt"
   },
   "devDependencies": {
     "chai": "*",
     "grunt": "^0.4.5",
     "time-grunt": "^0.3.1",
+    "load-grunt-tasks": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-jshint": "^0.10.0",
@@ -19,9 +20,7 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-node-webkit-builder": "^0.1.21",
-    "grunt-uncss": "^0.3.4",
     "grunt-open": "^0.2.3",
-    "grunt-contrib-connect": "^0.8.0",
-    "load-grunt-tasks": "^0.6.0"
+    "grunt-contrib-connect": "^0.8.0"
   }
 }
