--- a/lib/templates/general/src/package.json
+++ b/lib/templates/general/src/package.json
@@ -24,11 +24,13 @@
     "grunt-contrib-compress": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-csslint": "^0.3.1",
+    "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-imagemin": "^0.8.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-qunit": "^0.5.2",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-csscomb": "^3.0.0",
     "grunt-ftp-deploy": "^0.1.3",
     "grunt-grunticon": "^1.2.13",
     "grunt-phantomas": "^0.10.0",
