--- a/lib/templates/spa/.jsbeautifyrc
+++ b/lib/templates/spa/.jsbeautifyrc
@@ -1,6 +1,6 @@
 {
   "html": {
-    "allowed_file_extensions": ["htm", "html", "xhtml", "shtml", "xml", "svg"],
+    "allowed_file_extensions": ["htm", "html", "xhtml", "shtml", "xml", "svg", "php"],
     "brace_style": "collapse", // "expand", "end-expand", "expand-strict"
     "indent_char": " ",
     "indent_handlebars": false, // e.g. {{#foo}}, {{/foo}}
@@ -14,14 +14,14 @@
   },
   "css": {
     "allowed_file_extensions": ["css", "scss", "sass", "styl"],
-    "end_with_newline": false,
+    "end_with_newline": true,
     "indent_char": " ",
     "indent_size": 4,
     "selector_separator": " ",
     "selector_separator_newline": false
   },
   "js": {
-    "allowed_file_extensions": ["js", "json", "jshintrc", "jsbeautifyrc"],
+    "allowed_file_extensions": ["js", "json"],
     "brace_style": "collapse", // "expand", "end-expand", "expand-strict"
     "break_chained_methods": false,
     "e4x": false,
