--- a/lib/templates/sinatra/Rakefile
+++ b/lib/templates/sinatra/Rakefile
@@ -36,7 +36,7 @@ end
 
 Rake::TestTask.new do |t|
   t.libs.push("./")
-  t.test_files = FileList['tests/*.rb']
+  t.test_files = FileList['test/*.rb']
   t.verbose = true
 ends
 
