--- a/lib/templates/webapp/package.json
+++ b/lib/templates/webapp/package.json
@@ -12,9 +12,9 @@
   "keywords": [
     "boilerplate",
     "gulp",
-    "framework",
-    "template",
-    "backbonejs"
+    "nodejs",
+    "express",
+    "framework"
   ],
   "repository": {
     "type": "git",
@@ -25,46 +25,30 @@
   },
   "licenses": {
     "type": "MIT",
-    "url": "http://vitorbritto.mit-license.org/"
-  },
-  "engines": {
-    "node": "~0.10.0"
+    "url": "https://github.com/vitorbritto/boilerplates/blob/master/LICENSE"
   },
   "dependencies": {
-    "jade": "~1.3.0",
-    "stylus": "0.42.3",
-    "nib": "^1.0.2",
-    "lodash": "~2.4.1",
-    "jquery": "^2.1.1",
-    "backbone": "^1.1.2",
-    "browserify": "^4.0.0",
-    "mocha": "^1.18.2",
-    "chai": "~1.9.1",
-    "karma": "latest",
-    "jadeify": "^2.3.0"
+    "gulp": "^3.8.10"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "time-grunt": "^0.3.1",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-compress": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-browser-sync": "^0.9.1",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-csslint": "^0.2.0",
-    "grunt-contrib-stylus": "^0.15.0",
-    "grunt-imageoptim": "^1.4.1",
-    "grunt-browserify": "^2.0.8",
-    "grunt-karma": "^0.8.2",
-    "grunt-karma-coveralls": "^2.3.0",
-    "karma-browserify": "0.0.6",
-    "karma-mocha": "~0.1",
-    "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.1",
-    "karma-firefox-launcher": "~0.1.2",
-    "karma-phantomjs-launcher": "~0.1.1",
-    "karma-coverage": "^0.2.4"
+    "browser-sync": "^1.3.6",
+    "chai": "~1.9.1",
+    "gulp-changed": "^0.3.0",
+    "gulp-concat": "^2.4.3",
+    "gulp-csscomb": "^3.0.3",
+    "gulp-csslint": "^0.1.5",
+    "gulp-cssmin": "^0.1.6",
+    "gulp-header": "^1.0.2",
+    "gulp-imagemin": "^0.5.0",
+    "gulp-jshint": "^1.5.5",
+    "gulp-load-plugins": "^0.5.1",
+    "gulp-mocha": "^2.0.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
+    "gulp-shell": "^0.2.11",
+    "gulp-stylus": "^2.0.0",
+    "gulp-uglify": "^0.3.0",
+    "jshint-stylish": "^0.2.0"
   }
 }
