--- a/init/templates/wordpress/src/package.json
+++ b/init/templates/wordpress/src/package.json
@@ -14,10 +14,10 @@
     "npm": ">=1.2.15"
   },
   "dependencies": {
+    "grunt": "^0.4.5",
     "browserify": "^4.0.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
     "grunt-browser-sync": "^1.5.2",
     "grunt-browserify": "^2.0.8",
     "grunt-bump": "0.0.16",
@@ -43,6 +43,9 @@
     "grunt-styleguide": "^0.2.17",
     "grunt-uncss": "^0.3.7",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "time-grunt": "^0.3.1",
+    "grunt-po2mo": "^0.1.0",
+    "grunt-pot": "^0.2.0",
+    "grunt-checktextdomain": "^0.1.1"
   }
 }
