--- a/init/templates/sinatra/.csslintrc
+++ b/init/templates/sinatra/.csslintrc
@@ -1,4 +1,19 @@
---errors=important, duplicate-properties
---warnings=import, ids style.css, empty-rules
---ignore=
---exclude-list=
+{
+    "adjoining-classes":            false,
+    "box-sizing":                   false,
+    "box-model":                    false,
+    "compatible-vendor-prefixes":   false,
+    "floats":                       false,
+    "font-sizes":                   false,
+    "gradients":                    false,
+    "important":                    false,
+    "known-properties":             false,
+    "outline-none":                 false,
+    "qualified-headings":           false,
+    "regex-selectors":              false,
+    "shorthand":                    false,
+    "text-indent":                  false,
+    "unique-headings":              false,
+    "universal-selector":           false,
+    "unqualified-attributes":       false
+}
