--- a/init/templates/wordpress/src/package.json
+++ b/init/templates/wordpress/src/package.json
@@ -9,18 +9,12 @@
     "name": "Vitor Britto",
     "url": "http://vitorbritto.com.br"
   },
-  "engines": {
-    "node": ">=0.10.0",
-    "npm": ">=1.2.15"
-  },
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "browserify": "^4.0.0"
-  },
   "devDependencies": {
+    "grunt": "^0.4.5",
     "grunt-browser-sync": "^1.5.2",
     "grunt-browserify": "^2.0.8",
     "grunt-bump": "0.0.16",
+    "grunt-checktextdomain": "^0.1.1",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-compress": "^0.8.0",
@@ -34,18 +28,14 @@
     "grunt-csscomb": "^3.0.0",
     "grunt-ftp-deploy": "^0.1.3",
     "grunt-grunticon": "^1.2.13",
-    "grunt-jsdoc": "^0.5.7",
     "grunt-mocha": "^0.4.11",
     "grunt-newer": "^0.8.0",
-    "grunt-phantomas": "^0.10.0",
-    "grunt-rsync": "^0.6.2",
-    "grunt-shell": "^1.1.1",
-    "grunt-styleguide": "^0.2.17",
-    "grunt-uncss": "^0.3.7",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
     "grunt-po2mo": "^0.1.0",
     "grunt-pot": "^0.2.0",
-    "grunt-checktextdomain": "^0.1.1"
+    "grunt-rsync": "^0.6.2",
+    "grunt-shell": "^1.1.1",
+    "grunt-svgmin": "^2.0.1",
+    "load-grunt-tasks": "^0.4.0",
+    "time-grunt": "^0.3.1"
   }
 }
